--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.2.5",
     "@mui/material": "^7.0.2",
+    "@mui/x-date-pickers": "^8.3.1",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router": "^7.6.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.5",
