--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@fontsource/roboto": "^5.2.5",
     "@mui/material": "^7.0.2",
     "@mui/x-date-pickers": "^8.3.1",
+    "@redux-devtools/extension": "^3.3.0",
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.6.0"
+    "react-router": "^7.6.0",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.5",
