--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "@vitest/browser": "^3.0.8",
     "@vitest/coverage-v8": "^3.0.8",
     "eslint": "^9.21.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-storybook": "^0.11.4",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^15.15.0",
     "playwright": "^1.51.0",
     "sass-embedded": "^1.85.1",
