--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^7.0.2",
     "@mui/x-date-pickers": "^8.3.1",
     "@redux-devtools/extension": "^3.3.0",
+    "@telegram-apps/sdk-react": "^3.3.6",
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
