--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.62.0",
     "react-router": "^7.6.0",
     "zustand": "^5.0.5"
   },
